--- a/index.html
+++ b/index.html
@@ -1,1 +1,158 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en-US">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="manifest" href="./manifest.json" crossorigin="use-credentials">
+    <link rel="icon" sizes="48x48" href="./favicon.ico">
+    <link rel="stylesheet" href="stylesheet.css">
+    <title>FirstName LastName's website</title>
+    <meta name="author" content="FirstName LastName">
+    <meta name="description"
+        content="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.">
+</head>
+
+<body>
+    <div class="menu" id="top">
+        <a class="active" href="#aboutme">About Me</a>
+        <a href="#research">Research</a>
+        <a href="#teaching">Teaching</a>
+    </div>
+
+    <h1>FirstName LastName's website</h1>
+
+    <h2 id="aboutme">About me</h2>
+    <div style="max-width: 1024px;">
+
+        <figure
+            style="width:200px; overflow: hidden; margin:0 0 0 1.5em;float:right;font-size: x-small;color: DarkGray;">
+            <img src="./me.jpg" width="200" height="250">
+            <figcaption>
+                <div style="color: DarkGray;">FirstName LastName 2022</div>
+            </figcaption>
+        </figure>
+
+        <p class="slim" style="text-align: justify; max-width: 700px;"> Lorem ipsum dolor sit amet, consectetur
+            adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+            cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            <br><br>
+            <a href="https://www.example.com">Company Website</a> |
+            <a href="https://www.example.com">Curriculum Vitae (PDF)</a>
+        </p>
+
+        <h3 id="contact">Contact</h3>
+        <ul>
+            <li>Email: <a href="mailto:asdf@example.com">asdf@example.com</a></li>
+            <li>Phone: <a href="tel:+15551234567">+1 555 123 4567</a></li>
+            <li>Fax: +1 555 123 4568</li>
+            <li>Office: 567 <a href="https://maps.google.com">Corporate Office at 123 Main Road</a></li>
+        </ul>
+    </div>
+
+    <h3 id="education">Education</h3>
+    <ul>
+        <li>Lorem ipsum dolor sit amet</li>
+        <li>Consectetur adipiscing elit</li>
+        <li>Sed do eiusmod tempor incididunt ut labore</li>
+    </ul>
+
+    <h2 class="slim" style="padding-top: 3em" id="research">Research</h2>
+    <div>
+        <hr class="slim"><a style="float: right;" href=#top>&uarr; top</a>
+    </div>
+
+    <h3 style="padding-top: 0%;">Projects</h3> 
+    <p class="slim"> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        
+    </p>
+    <h3>Publications</h3> 
+    <p class="slim">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut 
+        <a href="publications.html">aliquip</a> ex ea <a href="https://arxiv.org/">commodo consequat</a>
+    </p>
+
+    <ul>
+        <li>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua..
+        </li>
+        <li>
+            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        </li>
+        <li>
+            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+        </li>
+        <li>
+            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+            laborum.
+        </li>
+        <li>
+            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+            laborum.Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+            est laborum.
+        </li>
+        <li>
+            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+            laborum.Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+            est laborum.Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
+            id est laborum.
+        </li>
+    </ul>
+
+    <h3>Appearances</h3>
+    <p class="slim">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+        et dolore
+        <a href="research.html">Rmagna aliqua</a>.
+    </p>
+    <ul>
+        <li>2024/08 Lorem ipsum </li>
+        <li>2024/08 dolor sit amet</li>
+        <li>2024/05 consectetur adipiscing</li>
+        <li>... </li>
+    </ul>
+
+
+    <h3>Community Engagement</h3>
+    <p class="slim">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+        <a href="research.html">labore et dolore</a> magna aliqua.
+    </p>
+    <ul>
+        <li><a href="a.html">Duis aute irure </a></li>
+        <li><a href="b.html">Excepteur sint occaecat </a></li>
+        <li>officia deserunt mollit</li>
+        <li>...</li>
+    </ul>
+
+    <h2 class="slim" style="padding-top: 3em" id="teaching">Teaching</h2>
+    <div>
+        <hr class="slim"><a style="float: right;" href=#top>&uarr; top</a>
+    </div>
+    <p class="slim">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea <a
+            href="teaching.html">commodo consequat</a>.</p>
+    <ul>
+        <li>
+            <a href="q.html">Lorem</a>, Fall 2024
+        </li>
+        <li>
+            <a href="w.html">Ipsum</a>, Fall 2024
+        </li>
+        <li>
+            <a href="e.html">Dolor</a>, Fall 2024
+        </li>
+
+    </ul>
+
+
+    <footer>
+        <div>
+            <hr style="width: 100%;height:2px;border-width:0;color:lightslategrey; background-color:lightslategrey">
+            <a style="float: right;" href=#top>&uarr; top</a>
+            <a style="float: left;" href=#top>&nbsp;</a>
+            <div style="text-align: center">&middot; 2024 &middot; </div>
+        </div>
+    </footer>
+</body>
+
+</html>
